<resources>
    <string name="slogan_App">Inicia una nueva aventura con AudioPod y descubre una nueva forma de ver el mundo</string>
    <string name="nombre_App">AudioPod</string>
    <string name="nombre_App_registro">audioPod-Registrate!</string>
    <string name="boton_Inicio">Comienza</string>
    <string name="texto_registro">Registrate</string>
    <string name="text_sloganInicio">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="Boton_IniciarSecion">Ingresar</string>
    <string name="boton_recuperarContraseña">Recupera tu contraseña</string>
    <string name="boton_IngresoGoogle">Ingresa con Google</string>
    <string name="texto_Cuenta">No tienes cuenta?</string>
    <string name="text_nombre">Nicolas Duran Poveda</string>
    <string name="text_nombre_Registro">Nombre</string>
    <string name="text_apellido_Registro">Apellido</string>
    <string name="text_telefono_Registro">Telefono</string>
    <string name="text_correo_Registro">Correo Institucional</string>
    <string name="text_contrasena_Registro">Contraseña</string>
    <string name="text_concontrasena_Registro">Confirme contraseña</string>
    <string name="text_TyC">Acepto terminos y condiciones</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_continuarRec">Continuar</string>
    <string name="btn_Editar_Perfil">Editar Información</string>
    <string name="text_recontra">Introduzca su correo electronico para recibir las intrucciones de recuperar contraseña</string>
    <string name="welcome_drawer_header">welcome</string>
    <string name="productosMenu">productos</string>
    <string name="inicioMenu">inicio</string>
    <string name="pantalla_de_inicio_fragmentInicio">pantalla de inicio</string>
    <string name="pantalla_de_productos_fragmenProductos">pantalla de productos</string>
    <string name="navigation_drawer_open">abrir\n</string>
    <string name="navigation_drawer_close">Cerrar\n</string>
    <string name="carrito_menu">Carrito</string>
    <string name="categorias_menu">Categorias</string>
    <string name="perfil_menu">perfil</string>
    <string name="categoriaMenu">Categorias</string>
    <string name="carritoMenu">Carrito de compras</string>
    <string name="direccion_perfil">direccion</string>
    <string name="nombreuser_perfil">nombreUser</string>
    <string name="perfil">Perfil</string>
    <string name="btn_editar_foto_perfil">editar foto</string>
    <string name="apellido_user">Apellido user</string>
    <string name="correo_user">Correo User</string>
    <string name="direccion_user">Direccion_user</string>
    <string name="electronica">1. electronica (5)</string>
    <string name="categoria_ropa">2. Ropa(3)</string>
    <string name="categoriasHogar">3. Hogar(5)</string>
    <string name="Categoria_Deportes">4. Deportes(5)</string>
    <string name="Categoria_Accesorios">5. Accesorios(2)</string>
    <string name="categoria">Categoria</string>
    <string name="btn_guardar_informacion">Guardar Informacion</string>
    <string name="editar_perfil_Titulo">Editar Perfil</string>
    <string name="Texto_def_apell_editfrag">Apellido user</string>
    <string name="text_def_nombre_editfrag">nombreUser</string>
    <string name="Texto_def_correo_editfrag">Correo User</string>
    <string name="Texto_def_tel_editfrag">telefono User</string>
    <string name="TextBienvenida_Inicio">PARCIAL 2</string>
    <string name="Textinfo_Inicio">📱 Audiopod: Tu tienda virtual ideal
Audiopod es una plataforma de compras en línea donde encuentras una amplia variedad de productos al mejor precio. Con envíos rápidos, pagos seguros y ofertas exclusivas, hacemos que tu experiencia de compra sea fácil y conveniente.
¡Descubre todo lo que tenemos para ti! 🚀! 🚀</string>
    <string name="boton_fragInicio">Explorar Productos</string>
    <string name="Titulo_FragInicio">Inicio</string>
    <string name="carrito_Titulo">Carrito de compras</string>
    <string name="_1_producto">1. Luz de Noche Zen</string>
    <string name="proDesc_Carrito">Una lámpara suave que cambia de color, ideal para crear un ambiente relajante en tu habitación.</string>
    <string name="cantidad_producto_carrito">cantidad: 2</string>
    <string name="precio">$50.000 X unidad</string>
    <string name="_2_producto">2. Crema Hidratante Vital</string>
    <string name="proDesc_Carrito2">Crema ligera que hidrata y suaviza la piel, perfecta para todo tipo de piel.</string>
    <string name="cantidad_producto_carrito2">cantidad: 2</string>
    <string name="precio2">$50.000 X unidad</string>
    <string name="btn_pagar">Pagar</string>
    <string name="total_Carrito">TOTAL: $200.000</string>
    <string name="Stringproducto">balon de futbol</string>
    <string name="precioBalon_Products">40000</string>
    <string name="precio_productos">precio  $</string>
    <string name="DesBalon_productFrag">Balón de fútbol resistente y duradero, ideal para partidos y entrenamientos. Diseño aerodinámico para mejor precisión y control.</string>
    <string name="ropa_product">Camiseta blanca</string>
    <string name="desropa_products">Prendas cómodas y estilosas, diseñadas con materiales de alta calidad para cualquier ocasión. ¡Moda y confort en cada detalle</string>
    <string name="_70000">70000</string>
    <string name="deshogar_producto">Estaca resistente para jardín, ideal para sostener plantas y decorar espacios exteriores. Duradera y fácil de instalar</string>
    <string name="valorHogar">80000</string>
    <string name="gafas_de_sol">Gafas de sol</string>
    <string name="des_gasfaproduc">Gafas con diseño moderno, livianas y cómodas, ideales para proteger la vista con estilo.</string>
    <string name="_60000">60000</string>
    <string name="products_hogar">Lámpara de mesa LED</string>
    <string name="descrlamp_HOgar">Iluminación cálida y regulable, perfecta para lectura o decoración.</string>
    <string name="orgatitulo">Organizador de cajones</string>
    <string name="des_orga">Mantén tus objetos ordenados con este práctico separador ajustable.</string>
    <string name="aroma_hogar">Difusor de aromas</string>
    <string name="set_de_utensilios_de_cocina">Set de utensilios de cocina</string>
    <string name="desc_title">Completo, duradero y diseñado para facilitar tus preparaciones.</string>
    <string name="valor_Set">180000</string>
    <string name="des_aromas">Humidificador y ambientador 2 en 1 para un hogar más fresco y relajante.</string>
    <string name="text_btnagregar">Agregar</string>
    <string name="titulo_tech">Auriculares inalámbricos Bluetooth</string>
    <string name="desaudi">Sonido nítido, conexión estable y batería de larga duración.</string>
    <string name="valor_prod">1800000</string>
    <string name="tituloPOrt">Portatil HP</string>
    <string name="des_Porta">Portátil potente y ligero, ideal para trabajo y entretenimiento. Rendimiento eficiente y batería de larga duración.</string>
    <string name="tit_power">Cargador portátil (power bank)</string>
    <string name="des_power">Compacto y potente, ideal para cargar tus dispositivos donde sea.</string>
    <string name="tit_parlante">Mini parlante portátil</string>
    <string name="des_parlante">Sonido potente en tamaño compacto, perfecto para llevar a todos lados.</string>
    <string name="titleport">Portatil HP</string>
    <string name="des_port">Portátil potente y ligero, ideal para trabajo y entretenimiento. Rendimiento eficiente y batería de larga duración.</string>
    <string name="valorport">1800000</string>
    <string name="mancuernas">Mancuernas ajustables</string>
    <string name="mancu_Dep">Entrena en casa con peso regulable y diseño compacto.</string>
    <string name="bici_Depor">Bicicleta estática plegable</string>
    <string name="desbici_Depor">Ejercicio cardiovascular sin salir de casa, fácil de guardar.</string>
    <string name="cuerda_para_saltar_de_velocidad">Cuerda para saltar de velocidad</string>
    <string name="descuerda_Depo">Ligera, ajustable y perfecta para mejorar resistencia.</string>
    <string name="valorCuerda">18000</string>
    <string name="tit_botella">Botella deportiva térmica</string>
    <string name="desBotella">Mantiene tu bebida fría o caliente por horas.</string>
    <string name="tit_Estaca">Estaca para Jardin</string>
    <string name="tit_cahqueaa">Chaqueta impermeable liviana</string>
    <string name="des_cahqueta">Protección contra la lluvia sin perder estilo.</string>
    <string name="des_sudadera">Abrigada, moderna y perfecta para días casuales</string>
    <string name="titsudad">Sudadera con capucha</string>
    <string name="cinturon_acc">Cinturón de cuero clásico</string>
    <string name="descinturon_Acc">Resistente y con acabado elegante para uso diario</string>
    <string name="ElectronicaProducts">Electronica</string>
    <string name="ropaProducts">Ropa</string>
    <string name="deportesProducts">Deportes</string>
    <string name="hogar">Hogar</string>
    <string name="stock_product">Stock</string>
    <string name="ValorStock">100</string>
    <string name="textEdit_Products">cantidad</string>
    <string name="productos_agregado">Productos agregado</string>
    <string name="text_programaAcademico">Programa Academico</string>
    <string name="text_Semestre">Semestre cursando</string>
    <string name="text_Semestre_user">Usersemestre</string>
    <string name="programauser">Userprograma</string>
    <string name="parcial_segundo_momento">PARCIAL SEGUNDO MOMENTO</string>
    <string name="misdatos">Mi Perfil</string>
    <string name="costo_aproximado_de_Transporte">costo aproximado de Trasnporte  (1 viaje)</string>
    <string name="destinos">destinos</string>
    <string name="indique_si_el_destino_nacional_o_internacional">Indique si el destino nacional o internacional</string>
    <string name="analisis">Analisis</string>
    <string name="historico">Historico</string>
    <string name="logica">lOGICA</string>


</resources>