<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.myapplication.fragments.InicioFragment"
        app:defaultNavHost="true"
        android:label="@string/inicioMenu"/>
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.myapplication.fragments.PerfilFragment"
        app:defaultNavHost="true"
        android:label="@string/perfil_menu"/>
    <fragment
        android:id="@+id/AnalisisFragmenet"
        android:name="com.example.myapplication.fragments.parcial_mi_logica_fragment"
        app:defaultNavHost="true"
        android:label="@string/categoriaMenu"/>

    <fragment
        android:id="@+id/HistoricosFragment"
        android:name="com.example.myapplication.fragments.HistoricoFragment"
        app:defaultNavHost="true"
        android:label="@string/categoriaMenu"/>





</navigation>