<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/violeta">

        <ImageView
            android:id="@+id/img_logo_Inicio"
            android:layout_width="205dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one"
        android:gravity="center"
        android:text="@string/nombre_App"
        android:textColor="@color/blanco"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30sp"
            android:text="@string/TextBienvenida_Inicio"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30sp"
        android:text="@string/Textinfo_Inicio"
        android:textColor="@color/blanco"
        android:textSize="20sp" />

        <Button
            style="@style/edit_iniciar"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/boton_fragInicio"
            android:textSize="20sp"
            app:backgroundTint="@null"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"/>
</LinearLayout>