<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/violeta">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        style="@style/edit_carrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp">
        <ImageView

            android:id="@+id/imgAccs1"
            android:layout_width="80dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/accesorios"
            android:layout_margin="10sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titCinturon"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:text="@string/cinturon_acc"
                android:textColor="@color/blanco"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/descripbalon_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descinturon_Acc"
                android:textColor="@color/blanco"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/preciocintu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violeta"
                    android:textSize="20sp"
                    android:text="@string/precio_productos"
                    />
                <TextView
                    android:id="@+id/valorCintu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/violeta"
                    android:text="@string/precioBalon_Products"/>
                <Button
                    android:id="@+id/BtnagregarGafas1"
                    style="@style/edit_iniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    android:layout_marginStart="10sp"
                    android:text="@string/text_btnagregar"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        style="@style/edit_carrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp">

        <ImageView
            android:id="@+id/imgropa_Product"
            android:layout_width="80dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/accesorios"
            android:layout_margin="10sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titGafas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gafas_de_sol"
                android:textColor="@color/blanco"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/desgafas_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des_gasfaproduc"
                android:textColor="@color/blanco"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/preciogafas_Acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violeta"
                    android:textSize="20sp"
                    android:text="@string/precio_productos" />
                <TextView
                    android:id="@+id/valorgafas_Acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/violeta"
                    android:text="@string/_60000"/>
                <Button
                    android:id="@+id/BtnagregarGafas2"
                    style="@style/edit_iniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    android:layout_marginStart="10sp"
                    android:text="@string/text_btnagregar"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


</ScrollView>