<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">


    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="291dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nombreApp_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/nombre_App"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan_home"
        android:layout_width="329dp"
        android:layout_height="89dp"
        android:layout_marginBottom="192dp"
        android:fontFamily="@font/antic_didone"
        android:text="@string/slogan_App"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreApp_home"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/boton_Comineza_home"
        style="@style/edit_iniciar"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:text="@string/boton_Inicio"
        android:fontFamily="@font/antic_didone"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_home"
        app:layout_constraintVertical_bias="0.289" />

    <TextView
        android:id="@+id/registro_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic_didone"
        android:text="@string/texto_registro"
        android:textColor="@color/red"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_Comineza_home" />
</androidx.constraintlayout.widget.ConstraintLayout>